Rend 0.6.0 changelog:

Gameplay:
* Added a new 3-player map: "Lasertag"

UX:
* Last IP that was succesfully used to join a networked game is remembered and pre-filled in the Join game screen
* If server hosts a map that peer doesn't have, that map will be downloaded
* Join game dialog is now a modal window
	* Text input for IP is autofocused
* Gamepad button A can be used to confirm UI dialogs and B button can be used to go back

Bugfixes:
* Fixed graphical glitch in editor that shows in place of the sidebar until a map is opened
* Server-side peer no longer desyncs when another peer disconnects

Other:
* New tracks were added to the soundtrack

Rend 0.5.1 changelog:

* Increased performance on 3P/4P maps when multiple bots are in game

Bugfixes:
* Clients are no longer performing frame lenghtening if they are the ones lagging behind

Rend 0.5.0 changelog:

Gameplay:
* Look direction after respawning now depends on the rotation of the player spawn item
	* This rotation can be configured in the editor
* Added a new 4-player map: "Rocket Courtyard"

UX:
* Unused item properites were hidden in the editor
* Official map pack was renamed to official_ffa (to indicate these are deathmatch maps)
* Each map was renamed into format <number of players>_<name of the map> for better clarity
	* Also the maps will now be sorted by the number of players they support

Bugfixes:
* Fixed a bug where certain shortcuts didn't work in the editor after leaving playtest
* Fixed a possible crash when killing somebody with a projectile
* Fixed a crash when flag was placed into the level (by hiding the unused flag item)

Rend 0.4.0 changelog:

Bugfixes:
* Screenshots are no longer black
* FPS now correctly reflects real-life performance

UX:
* Added an option to show FPS
* In-game score now shows offset from the first / second player's score

Gameplay:
* Added a new 3-player map: "Shotgun Frenzy"
* It is possible to play the game in online multiplayer!

Known Issues: